--- a/style.css
+++ b/style.css
@@ -15,6 +15,31 @@ body {
     max-width: 1100px;
     margin: 0 auto;
   }
+
+  .nombre-header {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+    font-size: 1.8rem;
+    font-weight: bold;
+  }
+  
+  /* Avatar redondo con efecto neon */
+  .avatar-neon {
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    object-fit: cover;
+    border: 3px solid #fff;
+    box-shadow: 0 0 10px #ffff33, 0 0 20px #ffff33, 0 0 30px #ffff33;
+    transition: transform 0.3s ease, box-shadow 0.3s ease;
+  }
+  
+  .avatar-neon:hover {
+    transform: scale(1.05);
+    box-shadow: 0 0 12px #ffff33, 0 0 25px #ffff33, 0 0 35px #ffff33;
+  }
+  
   
   nav a {
     color: #fff;
